# CMakeGtestTest

./: CMakeLists.txt  build.sh  run.sh
include/: test.h
src/gtest/: gtest_main.cc
src/main/: main.cc
src/test/: test1.cc  test2.cc
