cmake_minimum_required(VERSION 3.10)
PROJECT(TEST)

SET(CMAKE_C_COMPTLER GCC)
aux_source_directory(./src/test TEST_LIST)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
ADD_LIBRARY(libtest STATIC ${TEST_LIST})

aux_source_directory(./src/main SRC_LIST) 
# INCLUDE_DIRECTORIES(${TEST_SOURCE_DIR}/include)
SET(EXECUTABLE_OUTPUT_PATH ${TEST_SOURCE_DIR}/bin)
ADD_EXECUTABLE(main ${SRC_LIST})
link_directories(${TEST_SOURCE_DIR}/lib)
target_link_libraries(main libtest)

find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
aux_source_directory(./src/gtest GTEST_LIST) 
# INCLUDE_DIRECTORIES(${TEST_SOURCE_DIR}/include)
SET(EXECUTABLE_OUTPUT_PATH ${TEST_SOURCE_DIR}/bin)
ADD_EXECUTABLE(gtest_main ${GTEST_LIST})
target_link_libraries(gtest_main ${GTEST_LIBRARIES} pthread)
link_directories(${TEST_SOURCE_DIR}/lib)
target_link_libraries(gtest_main libtest)
